# practice-booking-system

./: .dockerignore  .env.example  .gitignore  LICENSE-THIRD-PARTY.md  Makefile  README.md  README_STUDENT_RESET.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  vercel.json
.stash_conflict_backup/: JugglingAnnotationScreen.swift.conflict_20260619_131730  JugglingAnnotationScreen.swift.stash_side_only  project.pbxproj.conflict_20260619_131730  project.pbxproj.stash_side_only
api/: staging.py
app/: celery_app.py  config.py  dependencies.py  main.py  skills_config.py
cypress/: cypress.config.js
docker/: Dockerfile.test
docs/: AN2_IMPLEMENTATION_REPORT.md  AN2_PR_READINESS_REPORT.md  AN2_XCODE_INTEGRATION_VALIDATION_PLAN.md  AN2_XCODE_INTEGRATION_VALIDATION_REPORT.md  AN3B1_IMPLEMENTATION_REPORT.md  AN3B2A_E2E_AUDIT_AND_PLAN.md  AN3B2A_P1_P6_FINAL_ORDER.md  AN3B2A_P2B_LABELING_UX_AUDIT_AND_PLAN.md  AN3B2B2_BACKEND_FEEDBACK_REVIEW_PIPELINE_PLAN.md  AN3B2B_1_BALL_DETECTION_IMPLEMENTATION_PLAN.md  AN3B2B_1_SKILL_INTEGRATION_AUDIT.md  AN3B2B_2_FUNCTIONAL_BALL_DETECTION_PIPELINE_PLAN.md  AN3B2B_COVERAGE_AUDIT.md  AN3B2B_LICENCE_COMPLIANCE_AUDIT.md  AN3B2B_PHASE2B_AUDIT_AND_PLAN.md  AN3B2C_1_BALL_DETECTION_IMPLEMENTATION_PLAN.md  AN3B2C_2_IMPLEMENTATION_PLAN.md  AN3B2C_PHASE2C_AUDIT_AND_PLAN.md  AN3B2C_SKELETON_RENDERER_AUDIT_AND_PLAN.md  AN3B2C_TRACKING_AND_SKELETON_AUDIT_AND_PLAN.md  AN3B2D3_QA_REPORT.md  AN3B2D_BALL_MODEL_STRATEGY_AUDIT.md  AN3B2D_CONTINUOUS_BALL_AND_SKELETON_TRACKING_PLAN.md  AN3B2E_AUDIT_AND_PLAN.md  (+18 more)
(+1642 files in other folders)
