[project]
name = "lfa-staging-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.129.0",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.36",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "email-validator==2.1.2",
    "phonenumbers==9.0.24",
]

[tool.vercel]
entrypoint = "api.staging:app"
